// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress measure location inside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="inside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location inside and small should render large 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="large-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location none 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="none-progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location outside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-outside pf-m-singleline"
    id="outside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location top 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="top-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size lg 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-lg pf-m-singleline"
    id="lg-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size md 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="md-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size sm 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-sm pf-m-singleline"
    id="sm-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant danger 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-danger pf-m-singleline"
    id="danger-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 512 512"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M14.75 16V9a1.25 1.25 0 0 1 2.5 0v7a1.25 1.25 0 0 1-2.5 0ZM31 16c0 8.271-6.729 15-15 15S1 24.271 1 16 7.729 1 16 1s15 6.729 15 15Zm-2 0c0-7.168-5.832-13-13-13S3 8.832 3 16s5.832 13 13 13 13-5.832 13-13Zm-13 4.261a1.75 1.75 0 1 0 .001 3.501A1.75 1.75 0 0 0 16 20.261Z"
            />
          </svg>
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant success 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-success pf-m-singleline"
    id="success-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 512 512"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm0 28C8.832 29 3 23.168 3 16S8.832 3 16 3s13 5.832 13 13-5.832 13-13 13Zm7.707-17.707a.999.999 0 0 1 0 1.414l-8.646 8.646c-.292.292-.676.438-1.061.438s-.768-.146-1.061-.438l-4.646-4.646a.999.999 0 1 1 1.414-1.414L14 19.586l8.293-8.293a.999.999 0 0 1 1.414 0Z"
            />
          </svg>
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant warning 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-warning pf-m-singleline"
    id="warning-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 576 512"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M31.461 27.771 17.3 2.301a1.499 1.499 0 0 0-2.623 0L.517 27.771c-.261.469-.255 1.025.018 1.489s.756.74 1.294.74h28.322c.537 0 1.021-.276 1.293-.74a1.49 1.49 0 0 0 .018-1.489ZM2.678 28l13.31-23.942L29.3 28H2.678ZM16 11.75c.69 0 1.25.56 1.25 1.25v5a1.25 1.25 0 0 1-2.5 0v-5c0-.69.56-1.25 1.25-1.25Zm1.75 12.261a1.75 1.75 0 1 1-3.501-.001 1.75 1.75 0 0 1 3.501.001Z"
            />
          </svg>
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress with aria-valuetext 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-aria-valuetext"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      aria-valuetext="Descriptive text here"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Simple progress 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-simple-example"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`additional label 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="additional-label"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        Additional label
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no value specified 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="no-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value higher than maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="higher-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        100%
      </span>
    </div>
    <div
      aria-valuemax="60"
      aria-valuemin="0"
      aria-valuenow="77"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 100%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value lower than minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="lower-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="40"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled between minValue and maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-range-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        57%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 57%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        62%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="0"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 62%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        44%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 44%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
